# devserch-django

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
devsearch/: forms.py  settings.py  urls.py  views.py
projects/: forms.py  models.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_tag_project_vote_ratio_project_vote_total_review_and_more.py  0003_project_feature_image.py  0004_project_owner.py
projects/templates/projects/: delete_confirm.html  project_form.html  projects.html  single-project.html
static/js/: main.js
static/style/: app.css  main.css
static/uikit/: app.js
static/uikit/styles/modules/: _alert.css
templates/: delete_confirm.html  header.html  main.html  navbar.html  pagination.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
users/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_profile_username.py
users/templates/users/: inbox.html  login-register.html  message.html  message_form.html  profile_form.html  profiles.html  skill_form.html  user-account.html  user-profile.html
